--- a/conf/conf.xml.example
+++ b/conf/conf.xml.example
@@ -1,6 +1,17 @@
 <?xml version="1.0"?>
 <conf>
 
+  <!-- stm32f3 -->
+  <aircraft
+   name="Quad_stm32f3"
+   ac_id="3"
+   airframe="airframes/examples/stm32f3_quad_pwm.xml"
+   radio="radios/mx-16.xml"
+   telemetry="telemetry/default_rotorcraft.xml"
+   flight_plan="flight_plans/rotorcraft_stm32f3.xml"
+   settings=" settings/rotorcraft_basic.xml"
+   gui_color="blue"
+  />
   <!-- booz2 / navgo -->
   <aircraft
     name="BOOZ2"
