--- a/conf/Makefile.stm32
+++ b/conf/Makefile.stm32
@@ -36,8 +36,9 @@ Q=@
 #
 include $(PAPARAZZI_SRC)/conf/Makefile.arm-embedded
 
-
-ifeq ($(ARCH_L),f4)
+ifeq ($(ARCH_L),f3)
+MCU   = cortex-m4
+else ifeq ($(ARCH_L),f4)
 MCU   = cortex-m4
 else
 MCU   = cortex-m3
@@ -106,6 +107,12 @@ CFLAGS = -I. -I./$(ARCH) -I../ext/libopencm3/include $(INCLUDES)
 CFLAGS += -D__thumb2__ -Wall -O$(OPT)
 ifeq ($(ARCH_L), )
 CFLAGS += -msoft-float
+else ifeq ($(ARCH_L),f3)
+ifndef HARD_FLOAT
+CFLAGS += -msoft-float
+else
+CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
+endif
 else ifeq ($(ARCH_L),f4)
 ifndef HARD_FLOAT
 CFLAGS += -msoft-float
@@ -135,6 +142,9 @@ ifneq ($(ARCH_L), )
 ifeq ($(ARCH_L),f4)
 CFLAGS += -DSTM32F4
 endif
+ifeq ($(ARCH_L),f3)
+CFLAGS += -DSTM32F3
+endif
 else
 CFLAGS += -DSTM32F1
 endif
@@ -150,6 +160,13 @@ LDFLAGS += -T$(LDSCRIPT) -nostartfiles -O$(OPT) -mthumb -mcpu=$(MCU)
 
 ifeq ($(ARCH_L), )
 LDFLAGS += -mfix-cortex-m3-ldrd -msoft-float
+else ifeq ($(ARCH_L),f3)
+ifndef HARD_FLOAT
+LDFLAGS += -mfix-cortex-m3-ldrd -msoft-float
+else
+LDFLAGS += -lnosys -D__thumb2__\
+           -mfloat-abi=hard -mfpu=fpv4-sp-d16
+endif
 else ifeq ($(ARCH_L),f4)
 ifndef HARD_FLOAT
 LDFLAGS += -mfix-cortex-m3-ldrd -msoft-float
